--- a/style.css
+++ b/style.css
@@ -2,14 +2,20 @@ body{
     margin:0%
 }
 header{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    padding: 50px;
+    padding-top: 3%;
+    background-color: rgb(0, 0, 0);
+    background: linear-gradient(0deg,#1e1e1e,#2c3e50);
+    padding-bottom: 3%;
+    padding:30px;
     text-align: center;
+    background :linear-gradient(180deg,#2c3e50,#1e1e1e);
 }
 body{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    background:linear-gradient(180deg,#1e1e1e,#2c3e50);
+    color: rgb(255, 255, 255);
     text-decoration: solid;
     padding: 30px;
     text-align: center;
@@ -17,16 +23,44 @@ body{
 nav{
     display: flex;
     font: bold;
-    font-style: italic;
+    padding: 10px;
+    font-style: Bold;
     color: rgb(255, 0, 0);
     justify-content: center;
     gap: 50px;
 }
 .hero
 {
+    padding: 10%;
+    padding-left: 10%;
     height :50vh;
     display:  flex;
     flex-direction: column;
     justify-content: center;
     align-items:center
+}
+nav a{
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.5s;
+}
+nav a:hover{
+    color:#00bcd4;
+    transform: scale(1.05);
+}
+button {
+    padding: 12px 25px;
+    margin-top: 15px;
+    border: blanchedalmond;
+    border-radius: 3px;
+    background-color: #00bcd4;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+button:hover{
+    background-color: #0097a7;
+    transform: scale(1.5);
 }
